--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,13 @@
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
-  {% include nav.html %}
-  <main>
-    {{ content }}
-  </main>
+  <div id="main">
+    {% include nav.html %}
+    <div id="container">
+      {{ content }}
+    </div><!--end of container-->
+    {% include footer.html %}
+  </div> <!--end of main-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
