split head.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <div id="footer">
     <ul>
-        <li><img src="/assets/img/envelope-fill.svg" alt="email" height="1em"></li>
-        <li><img src="/assets/img/telephone-fill.svg" alt="tel" height="1em"></li>
-        <li><img src="/assets/img/github.svg" alt="github" height="1em"></li>
-        <li><img src="/assets/img/file-earmark-person-fill.svg" height="1em"></li>
-        <li><div style="background-color:black; width:.1em; height:3em"></div></li>
+        <li><img src="/assets/img/envelope-fill.svg" alt="email" height="24px"></li>
+        <li><img src="/assets/img/telephone-fill.svg" alt="tel" height="24px"></li>
+        <li><a href="https://github.com/Nephrite21" target="_blank"><img src="/assets/img/github.svg" alt="github" height="24px"></a></li>
+        <li><img src="/assets/img/file-earmark-person-fill.svg" height="24px"></li>
+        <li> <div style="background-color:black; width:.12px; height:120px"></div></li>
     </ul>
 </div>
