--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Jekyll with Bootstrap 5 Sass</title>
-  <link rel="stylesheet" href="/assets/css/main.css">
-</head>
+  {% include head.html %}
 <body>
   <div id="main">
     {% include nav.html %}
