--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
+<!--need to change exact value to relative value-->
 <div id="footer">
-    <ul>
-        <li><img src="/assets/img/envelope-fill.svg" alt="email" height="24px"></li>
-        <li><img src="/assets/img/telephone-fill.svg" alt="tel" height="24px"></li>
-        <li><a href="https://github.com/Nephrite21" target="_blank"><img src="/assets/img/github.svg" alt="github" height="24px"></a></li>
-        <li><img src="/assets/img/file-earmark-person-fill.svg" height="24px"></li>
-        <li> <div style="background-color:black; width:.12px; height:120px"></div></li>
+    <ul id="footerList">
+        <li><a href=""><img src="/assets/img/envelope-fill.svg" alt="email"></a></li>
+        <li><a href=""><img src="/assets/img/telephone-fill.svg" alt="tel"></a></li>
+        <li><a href=" {{ site.githuburl }} " target="_blank"><img src="/assets/img/github.svg" alt="github"></a></li>
+        <li><a href=""><img src="/assets/img/file-earmark-person-fill.svg"></a></li>
     </ul>
 </div>
