post layout edited

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,3 +3,5 @@
 @import "bootstrap/bootstrap";
 @import "base/base";
 @import "layout/footer";
+@import "layout/defaultcontent";
+@import "layout/banner";
