--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jekyll with Bootstrap 5 Sass</title>
     <link rel="stylesheet" href="/assets/css/main.css">
 </head>
