--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,12 @@
 <body>
   <div id="main">
     {% include nav.html %}
-    <div id="container">
+    <main class="container-md">
       {{ content }}
-    </div><!--end of container-->
+    </main><!--end of container-->
     {% include footer.html %}
   </div> <!--end of main-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 </body>
 </html>
