--- a/_sass/layout/footer.scss
+++ b/_sass/layout/footer.scss
@@ -1,34 +1,41 @@
 //need to change exact value to relative value
+@media screen and (min-width: 768px){
+    #footer{
+        display: inline-block;
+        margin-block-start: 1em;
+        margin-block-end: 0em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        padding-inline-start: 40px;
+        position: fixed;
+        bottom: -2em;
+        left: 0;;
+    }
+    #footerList {
+        padding: 0px;
+        display: flex;
+        flex-flow: column nowrap; 
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+    }
+    #footerList::after{
+        content: "";
+        display: block;
+        width: 0.1em;
+        height: 8em;
+        margin: 0px auto;
+        background-color: black;
+    }
+    #footerList li a img{
+        height: 1.5em;
+        margin: 10px;
+        max-height: 40px;
+    }
+}
 
-#footer{
-    display: inline-block;
-    margin-block-start: 1em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    position: fixed;
-    bottom: -2em;
-    left: 0;;
-}
-#footerList {
-    padding: 0px;
-    display: flex;
-    flex-flow: column nowrap; 
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-}
-#footerList::after{
-    content: "";
-    display: block;
-    width: 0.1em;
-    height: 8em;
-    margin: 0px auto;
-    background-color: black;
-}
-#footerList li a img{
-    height: 1.5em;
-    margin: 10px;
-    max-height: 40px;
+@media screen and (max-width: 992px) {
+    #footer{
+        padding-inline-start: 20px;
+    }    
 }
