--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-<div class="banner">
-    <div class="bannerimg"><img src="{{ page.mainimgsrc }}" class="img-fluid" alt="banner" height="350px"></div>
+<div id="banner">
+    <!--<div id="bannerbackgroundimg"><img id="bannerbackgroundimgsource" src="{{ page.mainimgsrc }}" alt="bannerbackground"></div>-->
+    <div id="bannerimg"><img id="bannerimgsource" src="{{ page.mainimgsrc }}" alt="banner"></div>
     <div class="posttitle">{{ page.title }}</div>
     <div class="date">{{ page.date }}</div>
 </div>
