--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div id="banner">
-    <!--<div id="bannerbackgroundimg"><img id="bannerbackgroundimgsource" src="{{ page.mainimgsrc }}" alt="bannerbackground"></div>-->
-    <div id="bannerimg"><img id="bannerimgsource" src="{{ page.mainimgsrc }}" alt="banner"></div>
+    <div id="bannerbackgroundimg"><img id="bannerbackgroundimgsource" src="{{ page.mainimgsrc }}" alt="bannerbackground"></div>
+    <div id="bannerimg"><img id="bannerimgsource" class="container-md" src="{{ page.mainimgsrc }}" alt="banner"></div>
     <div class="posttitle">{{ page.title }}</div>
     <div class="date">{{ page.date }}</div>
 </div>
