--- a/_sass/layout/banner.scss
+++ b/_sass/layout/banner.scss
@@ -1,8 +1,27 @@
+#banner{
+    width: 100vw;
+    height: 450px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+#bannerbackgtoundimg{
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+#bannerbackgroundimgsource{
+    filter: blur(7px);
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
 #bannerimg{
     width: 100%;
-    height: 450px;
     overflow: hidden;
-    position: relative;
+    z-index: 1;
 }
 #bannerimgsource{
     position: absolute;
@@ -10,8 +29,4 @@
     left: 50%;
     transform: translate(-50%,-50%);
     width: 100%;
-}
-#banner{
-    width: 100%;
-    text-align: center;
 }
