--- a/_sass/layout/banner.scss
+++ b/_sass/layout/banner.scss
@@ -5,28 +5,59 @@
     position: relative;
     overflow: hidden;
 }
+
 #bannerbackgtoundimg{
     width: 100%;
     height: 100%;
     z-index: 0;
 }
 #bannerbackgroundimgsource{
-    filter: blur(7px);
+    filter: blur(7px) brightness(75%);
     position: absolute;
     width: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
+
 #bannerimg{
     width: 100%;
     overflow: hidden;
     z-index: 1;
 }
 #bannerimgsource{
+    filter: brightness(75%);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 100%;
+}
+
+#posttitleform{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 50px;
+}
+#posttitle{
+    width: 100%;
+}
+h1{
+    text-align: left;
+}
+@media screen and (min-width: 768px) {
+    h1 {
+        font-size: 48px;
+    }
+}
+#date{
+    width: 100%;
+    text-align: right;
+    color: aliceblue;
 }
