Complete content box

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,6 @@ layout: default
         <div id="date"><h6>{{ page.date }}</h6></div>
     </div> 
 </div>
-<div>
+<div id="postcontent">
     {{ content }}
 </div>
