--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   {% include head.html %}
-<body>
+<body style="overflow-x: hidden">
   <div id="main">
     {% include nav.html %}
     <main class="container-md">
