--- a/_sass/layout/defaultcontent.scss
+++ b/_sass/layout/defaultcontent.scss
@@ -2,7 +2,7 @@ main{
     min-height: 100vh;
     display: flex;
     flex-flow: column;
-    justify-content: space-between;
+    justify-content: space-start;
     align-items: center;
     flex-basis: 70vh;
 }
