--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!--need to change exact value to relative value-->
 <div id="footer">
-    <ul id="footerList">
+    <ul id="footerlist">
         <li><a href=""><img src="/assets/img/envelope-fill.svg" alt="email"></a></li>
         <li><a href=""><img src="/assets/img/telephone-fill.svg" alt="tel"></a></li>
         <li><a href=" {{ site.githuburl }} " target="_blank"><img src="/assets/img/github.svg" alt="github"></a></li>
