--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,4 +5,5 @@
 @import "layout/footer";
 @import "layout/defaultcontent";
 @import "layout/banner";
-@import "layout/post"
+@import "layout/post";
+@import "layout/about";
