--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,12 +1,27 @@
 ---
 layout : default
 ---
-<div id="about-me" class="section">
-    1
+<div id="about-me" class="scroll-area">
+    <div id="about-me-content">
+        <div id="introduction">
+            <h1>
+                Hello!, I'm Nephrite21!
+            </h1>
+            <br>
+            <h3>
+                I usually play and make games! I'm interested in Unity, Unreal engine!
+            </h3>
+        </div>
+        <div id="id-charactor">
+            <a href='https://.pngtree.com/so/잔디'>
+                <img id="my-charactor-img" src="/assets/img/dog.png" alt="잔디 png에서 .pngtree.com/">
+            </a>
+        </div>
+    </div>
 </div>
-<div id="about-my-skill" class="section">
+<div id="about-my-skill" class="scroll-area">
     2
 </div>
-<div id="about-my-work" class="section">
+<div id="about-my-work" class="scroll-area">
     3
 </div>
