--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,13 @@
   {% include head.html %}
 <body style="overflow-x: hidden">
   <div id="main">
-    {% include nav.html %}
+    <!--{% include nav.html %}-->
     <main class="container-md">
       {{ content }}
     </main><!--end of container-->
     {% include footer.html %}
   </div> <!--end of main-->
+  <!--<script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 </body>
