--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -1,27 +1,47 @@
-html{overflow: hidden;}
-.section{
+html,body{
+    scroll-snap-type: y mandatory;
+    overflow: auto;
+}
+
+.scroll-container{
+    overflow: auto;
+}
+.scroll-area{
+    scroll-snap-align: start;
+}
+#big{
+    width: 100%;
+}
+#about-me{
+    height: 100vh;
+    position:relative;
     width: 100%;
     background-color: aliceblue;
-    position: relative;
+    box-sizing: border-box;
 }
-//확인을 위한 것 삭제 필요
-.section > h1{
+#about-me-content{
+    display: flex;
     position: absolute;
-	top: 50%; left: 50%;
-	transform: translate(-50%,-50%);
- 
-	font-size: 20em;
-	font-weight: bold;
-	text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.6);
+    width: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    justify-content: space-between;
+    align-items: center;
 }
-.section:nth-child(even){background-color: #333;}
-
-#about-me{
-    height: 95vh;
+#introduction{
+    width: 70%;
+}
+#id-charactor{
+    background-color: white;
+    border-radius: 100%;
+}
+#my-charactor-img{
+    height: 200px;
 }
 #about-my-skill{
     height: 100vh;
 }
 #about-my-work{
-    height: 150vh;
+    min-height: 150vh;
 }
