--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -49,6 +49,11 @@ html,body{
 }
 #about-my-skill-contents{
     text-align: center;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 #skill-icons{
     display: flex;
@@ -60,9 +65,20 @@ html,body{
 }
 .skill-img-src{
     width: 100%;
+    cursor: pointer;
+}
+#show-detail-button{
+    width: 30%;
+    border-radius: 6% / 50%;
+    margin: 20px;
 }
 #about-my-skill-detail{
     display: none;
+    flex-direction: column;
+    min-height: 30%;
+}
+#proficiency-part, #interest-part{
+    margin: 5px;
 }
 
 //3rd page
