complete progression bar
linked yml file and html progression bar

--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -80,6 +80,9 @@ html,body{
 #proficiency-part, #interest-part{
     margin: 5px;
 }
+.interest-and-proficiency, .interest-and-proficiency{
+    height: 20px;
+}
 
 //3rd page
 #about-my-work{
