--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -46,14 +46,13 @@ layout : default
                 </div>
             </div>
             {% endfor %}
-
             {% for item in site.proficiencyProgressionBar %}
             <div class="proficiency-part">
                 <div>
                     proficiency
                 </div>
                 <div class="progress interest-and-proficiency">
-                    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ item.proficiency }}</div>
+                    <div class="progress-bar" role="progressbar" style="width: {{ item.proficiencyGrade }}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ item.proficiency }}</div>
                 </div>
                 <div id="proficiency-description">
                     {{ item.proficiencyDescription }}
@@ -65,8 +64,8 @@ layout : default
                 <div>
                     interests
                 </div>
-                <div id="interest-level" class="progress interest-and-proficiency">
-                    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ item.interest }}</div>
+                <div class="progress interest-and-proficiency">
+                    <div class="progress-bar" role="progressbar" style="width: {{ item.interestGrade }}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ item.interest }}</div>
                 </div>
                 <div id="interest-description">
                     {{ item.interestDescription }}
