make a structure at 1st page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 layout : default
 ---
 <div id="about-me" class="scroll-area">
-    <div id="">
+    <div class="content-wrapper">
         <div id="about-me-content">
             <div id="introduction">
                 <h1>{{ site.introduction.greeting }}</h1>
