--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -12,6 +12,13 @@ html,body{
 
 
 //1st page
+.content-wrapper{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
 #about-me{
     height: 100vh;
     position:relative;
@@ -21,13 +28,8 @@ html,body{
 }
 #about-me-content{
     display: flex;
-    position: absolute;
     width: 80%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    justify-content: space-between;
-    align-items: center;
+    margin-top: 120px;
 }
 #introduction{
     width: 70%;
@@ -39,10 +41,16 @@ html,body{
 #my-charactor-img{
     height: 200px;
 }
+#show-detail-button{
+    width: 30%;
+    border-radius: 6% / 50%;
+    margin: 20px;
+    margin-bottom: 120px;
+}
 
 //2nd page
 #about-my-skill-page{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,21 +75,20 @@ html,body{
     width: 100%;
     cursor: pointer;
 }
-#show-detail-button{
-    width: 30%;
-    border-radius: 6% / 50%;
-    margin: 20px;
-}
 #about-my-skill-detail{
     display: none;
     flex-direction: column;
     min-height: 30%;
+    margin-bottom: 50px;
 }
 #proficiency-part, #interest-part{
     margin: 5px;
 }
 .interest-and-proficiency, .interest-and-proficiency{
     height: 20px;
+}
+.skill-detail{
+    height: 180px;
 }
 
 //3rd page
