--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,79 +2,97 @@
 layout : default
 ---
 <div id="about-me" class="scroll-area">
-    <div class="content-wrapper">
-        <div id="about-me-content">
-            <div id="introduction">
-                <h1>{{ site.introduction.greeting }}</h1>
-                <br>
-                <h3>
-                    {{ site.introduction.introductionAboutMe }}
-                </h3>
-            </div>
-            <div id="id-charactor">
-                <a href='https://.pngtree.com/so/잔디'>
-                    <img id="my-charactor-img" src="/assets/img/dog.png" alt="잔디 png에서 .pngtree.com/">
-                </a>
-            </div>
-        </div>
-        <button id="show-detail-button" class="btn btn-primary" type="button" onclick="window.open('{{ site.blogurl }}')">See My learning!</button>
+  <div class="content-wrapper container-md">
+    <div id="about-me-content">
+      <div id="introduction">
+        <h1>{{ site.introduction.greeting }}</h1>
+        <br>
+        <h3>
+          {{ site.introduction.introductionAboutMe }}
+        </h3>
+      </div>
     </div>
+    <button
+      id="show-detail-button"
+      class="btn btn-primary"
+      type="button"
+      onclick="window.open('{{ site.blogurl }}')">See My learning!</button>
+  </div>
+  <img id="about-banner" src="/assets/img/about-banner.png">
 </div>
 <div id="about-my-skill-page" class="scroll-area">
-    <div id="about-my-skill-contents">
-        <div>
-            <div id="about-my-skill-title">
-                <h2>My Skills</h2>
-            </div>
-            <div id="skill-icons">
-                {% for item in site.skillImageIcon %}
-                <div class="skill-img">
-                    <img class="skill-img-src" src="{{ item.src }}"">
-                </div>
-                {% endfor %}
-            </div>
-            <button id="show-detail-button" class="btn btn-primary" name="detail-button">See Detail!</button>
-        </div>
-        <div id="about-my-skill-detail">
-            {% for item in site.skillDetail %}
-            <div class="about-my-skill-container">
-                <div class="skill-name">
-                    {{ item.skillName }}
-                </div>
-                <div class="skill-detail">
-                    {{ item.skillDetail }}
-                </div>
-            </div>
-            {% endfor %}
-            {% for item in site.proficiencyProgressionBar %}
-            <div class="proficiency-part">
-                <div>
-                    proficiency
-                </div>
-                <div class="progress interest-and-proficiency">
-                    <div class="progress-bar" role="progressbar" style="width: {{ item.proficiencyGrade }}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ item.proficiency }}</div>
-                </div>
-                <div id="proficiency-description">
-                    {{ item.proficiencyDescription }}
-                </div>
-            </div>
-            {% endfor %}
-            {% for item in site.interestProgressionBar %}
-            <div class="interest-part">
-                <div>
-                    interests
-                </div>
-                <div class="progress interest-and-proficiency">
-                    <div class="progress-bar" role="progressbar" style="width: {{ item.interestGrade }}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{ item.interest }}</div>
-                </div>
-                <div id="interest-description">
-                    {{ item.interestDescription }}
-                </div>
-            </div>
-            {% endfor %}
-        </div>
+  <div id="about-my-skill-contents">
+    <div>
+      <div id="about-my-skill-title">
+        <h2>My Skills</h2>
+      </div>
+      <div id="skill-icons">
+        {% for item in site.skillImageIcon %}
+          <div class="skill-img">
+            <img
+              class="skill-img-src"
+              src="{{ item.src }}"
+              ">
+          </div>
+        {% endfor %}
+      </div>
+      <button
+        id="show-detail-button"
+        class="btn btn-primary"
+        name="detail-button">See Detail!</button>
     </div>
+    <div id="about-my-skill-detail">
+      {% for item in site.skillDetail %}
+        <div class="about-my-skill-container">
+          <div class="skill-name">
+            {{ item.skillName }}
+          </div>
+          <div class="skill-detail">
+            {{ item.skillDetail }}
+          </div>
+        </div>
+      {% endfor %}
+      {% for item in site.proficiencyProgressionBar %}
+        <div class="proficiency-part">
+          <div>
+            proficiency
+          </div>
+          <div class="progress interest-and-proficiency">
+            <div
+              class="progress-bar"
+              role="progressbar"
+              style="width: {{ item.proficiencyGrade }}"
+              aria-valuenow="25"
+              aria-valuemin="0"
+              aria-valuemax="100">{{ item.proficiency }}</div>
+          </div>
+          <div id="proficiency-description">
+            {{ item.proficiencyDescription }}
+          </div>
+        </div>
+      {% endfor %}
+      {% for item in site.interestProgressionBar %}
+        <div class="interest-part">
+          <div>
+            interests
+          </div>
+          <div class="progress interest-and-proficiency">
+            <div
+              class="progress-bar"
+              role="progressbar"
+              style="width: {{ item.interestGrade }}"
+              aria-valuenow="25"
+              aria-valuemin="0"
+              aria-valuemax="100">{{ item.interest }}</div>
+          </div>
+          <div id="interest-description">
+            {{ item.interestDescription }}
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
 </div>
 <div id="about-my-work" class="scroll-area">
-    3
+  3
 </div>
