--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -12,19 +12,32 @@ html,body{
 
 
 //1st page
+#about-me{
+    height: 100vh;
+    position:relative;
+    width: 100vw;
+    box-sizing: border-box;
+    overflow: hidden;
+    background-color: #1d1d20;
+}
+#about-banner{
+    width: 100vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
 .content-wrapper{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     display: flex;
     flex-flow: column;
     height: 100%;
     justify-content: space-evenly;
     align-items: center;
-}
-#about-me{
-    height: 100vh;
-    position:relative;
-    width: 100%;
-    background-color: aliceblue;
-    box-sizing: border-box;
+    z-index: 1;
 }
 #about-me-content{
     display: flex;
@@ -54,6 +67,7 @@ html,body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #1d1d20;
 }
 #about-my-skill-contents{
     text-align: center;
@@ -94,4 +108,5 @@ html,body{
 //3rd page
 #about-my-work{
     min-height: 150vh;
+    background-color: #1d1d20;
 }
