--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -10,6 +10,25 @@ html,body{
     scroll-snap-align: start;
 }
 
+:root{
+    --Main-color : #8CBDB9;
+    --Bright-color : #E0E7E9;
+    --SubText-color : #8FA8A8;
+    --Shadow-color : #6D7B8C;
+    --Background-color : #354649;
+    --Background-Brighter-color: #415659;
+    --Accent-color : #E5B680;
+}
+body{
+    background-color: var(--Background-color);
+}
+
+.Main-color { color: var(--Main-color); }
+.Bright-color { color: var(--Bright-color); }
+.Shadow-color { color: var(--Shadow-color); }
+.Background-color { color: var(--Background-color); }
+.Accent-color { color: var(--Accent-color); }
+.SubText-color { color: var(--SubText-color); }
 
 //1st page
 #about-me{
@@ -18,14 +37,13 @@ html,body{
     width: 100vw;
     box-sizing: border-box;
     overflow: hidden;
-    background-color: #1d1d20;
+    background-color: var(--Background-color);
 }
 #about-banner{
-    width: 100vw;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    height: 200vh;
+    top: -50%;
+    right: calc(-40vh + 10vw);
 }
 .content-wrapper{
     position: absolute;
@@ -45,7 +63,7 @@ html,body{
     margin-top: 120px;
 }
 #introduction{
-    width: 70%;
+    width: 75%;
 }
 #id-charactor{
     background-color: white;
@@ -55,10 +73,14 @@ html,body{
     height: 200px;
 }
 #show-detail-button{
-    width: 30%;
-    border-radius: 6% / 50%;
+    width: 15%;
+    border-radius: 5px;
     margin: 20px;
     margin-bottom: 120px;
+    background: none;
+    border: 2px solid var(--Main-color); 
+    height: 3em;
+    
 }
 
 //2nd page
@@ -67,7 +89,7 @@ html,body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1d1d20;
+    background-color: var(--Background-color);
 }
 #about-my-skill-contents{
     text-align: center;
@@ -81,6 +103,7 @@ html,body{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    background-color: var(--SubText-color);
 }
 .skill-img{
     flex-basis: 25%;
@@ -108,5 +131,5 @@ html,body{
 //3rd page
 #about-my-work{
     min-height: 150vh;
-    background-color: #1d1d20;
+    background-color: var(--Background-color);
 }
