--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -103,10 +103,11 @@ body{
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    background-color: var(--SubText-color);
 }
 .skill-img{
-    flex-basis: 25%;
+    background-color: var(--SubText-color);
+    border-radius: 35px;
+    flex-basis: 20%;
 }
 .skill-img-src{
     width: 100%;
