--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,26 @@
 ---
 layout : default
 ---
+<div id="page-indicator">
+  <button class="page-indicator-button">
+    <div class="indicator-text">
+      About me -
+    </div>
+    <div class="indicator-dot activated"></div>
+  </button>
+  <button class="page-indicator-button">
+    <div class="indicator-text">
+      My skills -
+    </div>
+    <div class="indicator-dot"></div>
+  </button>
+  <button class="page-indicator-button">
+    <div class="indicator-text">
+      My works -
+    </div>
+    <div class="indicator-dot long"></div>
+  </button>
+</div>
 <div id="about-me" class="scroll-area">
   <div class="content-wrapper container-md">
     <div id="about-me-content">
