Change 1st page Font

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -25,10 +25,10 @@ layout : default
   <div class="content-wrapper container-md">
     <div id="about-me-content">
       <div id="introduction">
-        <h1 class="Main-color" style="font-weight: bold">{{ site.introduction.greeting }}</h1>
-        <h2 class="SubText-color" style="font-weight: bold;">
+        <h1 class="Main-color font-Raleway" style="font-weight: bold">{{ site.introduction.greeting }}</h1>
+        <h2 class="SubText-color font-Raleway" style="font-weight: bold;">
           Lorem Ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-        <h4 class="Bright-color">
+        <h4 class="Bright-color font-Dosis">
           {{ site.introduction.introductionAboutMe }}
         </h4>
       </div>
