--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -17,7 +17,7 @@ html,body{
     --SubText-color : #8FA8A8;
     --Shadow-color : #6D7B8C;
     --Background-color : #354649;
-    --Background-Brighter-color: #05353D;
+    --Background-Brighter-color: #3c5358;
     --Accent-color : #E5B680;
 }
 body{
@@ -82,7 +82,6 @@ body{
     width: 100vw;
     box-sizing: border-box;
     overflow: hidden;
-    background-color: var(--Background-color);
 }
 #about-banner{
     position: absolute;
@@ -106,6 +105,19 @@ body{
     display: flex;
     width: 80%;
     margin-top: 120px;
+}
+.font-Dosis{
+    font-family: 'Dosis', sans-serif;
+}
+.font-Raleway{
+    font-family: 'Raleway', sans-serif;
+}
+#about-me-content::before{
+    width: 10px;
+    height: 100%;
+    content: "　";
+    background-color: var(--Accent-color);
+    margin-right: 20px;
 }
 #introduction{
     width: 75%;
