--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,19 +3,19 @@ layout : default
 ---
 <div id="page-indicator">
   <button class="page-indicator-button">
-    <div class="indicator-text">
+    <div class="indicator-text font-Dosis">
       About me -
     </div>
     <div class="indicator-dot activated"></div>
   </button>
   <button class="page-indicator-button">
-    <div class="indicator-text">
+    <div class="indicator-text font-Dosis">
       My skills -
     </div>
     <div class="indicator-dot"></div>
   </button>
   <button class="page-indicator-button">
-    <div class="indicator-text">
+    <div class="indicator-text font-Dosis">
       My works -
     </div>
     <div class="indicator-dot long"></div>
@@ -35,7 +35,7 @@ layout : default
     </div>
     <button
       id="show-detail-button"
-      class="Bright-color"
+      class="Bright-color font-Dosis"
       type="button"
       onclick="window.open('{{ site.blogurl }}')">See My learning!</button>
   </div>
