--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -21,7 +21,7 @@ layout : default
     <div class="indicator-dot long"></div>
   </button>
 </div>
-<div id="about-me" class="scroll-area">
+<div id="about-me" class="scroll-area content-container">
   <div class="content-wrapper container-md">
     <div id="about-me-content">
       <div id="introduction">
@@ -39,9 +39,12 @@ layout : default
       type="button"
       onclick="window.open('{{ site.blogurl }}')">See My learning!</button>
   </div>
+  <div class="Design-text">
+    About
+  </div>
   <!--<img id="about-banner" src="/assets/img/about-banner.png">-->
 </div>
-<div id="about-my-skill-page" class="scroll-area">
+<div id="about-my-skill-page" class="scroll-area content-container">
   <div id="about-my-skill-contents">
     <div>
       <div id="about-my-skill-title">
@@ -113,7 +116,12 @@ layout : default
       {% endfor %}
     </div>
   </div>
+  <div class="Design-text">
+    Skills
+  </div>
 </div>
-<div id="about-my-work" class="scroll-area">
-  3
+<div id="about-my-work" class="scroll-area content-container">
+  <div class="Design-text">
+    Works
+  </div>
 </div>
