--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -3,6 +3,7 @@ html,body{
     scroll-snap-type: y mandatory;
     overflow: auto;
     scroll-behavior: smooth;
+    scroll-snap-stop: always;
 }
 .scroll-container{
     overflow: auto;
@@ -20,6 +21,7 @@ html,body{
     --Background-color : #354649;
     --Background-Brighter-color: #3c5358;
     --Accent-color : #E5B680;
+    --Accent-Brighter-color: #FFDCB3;
 }
 body{
     background-color: var(--Background-color);
@@ -74,6 +76,19 @@ body{
 .indicator-text:hover{
     color: var(--Bright-color);
 }
+.Design-text{
+    font-size: 25rem;
+    font-weight: bolder;
+    color: var(--Background-Brighter-color);
+    position: absolute;
+    bottom: -16%;
+    right: -3%;
+    margin-bottom: 0;
+    z-index: -1;
+}
+.content-container{
+    position: relative;
+}
 
 
 //1st page
@@ -117,7 +132,7 @@ body{
     width: 10px;
     height: 100%;
     content: "　";
-    background-color: var(--Accent-color);
+    background: linear-gradient(to top,var(--Accent-color), var(--Accent-Brighter-color),);
     margin-right: 20px;
 }
 #introduction{
@@ -138,7 +153,11 @@ body{
     background: none;
     border: 2px solid var(--Main-color); 
     height: 3em;
-    
+}
+#show-detail-button:hover{
+    background-color: var(--Main-color);
+    color: var(--Background-color);
+    font-weight: 900;
 }
 
 //2nd page
@@ -147,7 +166,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--Background-color);
+    overflow: hidden;
 }
 #about-my-skill-contents{
     text-align: center;
@@ -189,6 +208,7 @@ body{
 
 //3rd page
 #about-my-work{
-    min-height: 150vh;
-    background-color: var(--Background-color);
+    min-height: 160vh;
+    width: 100%;
+    overflow: hidden;
 }
