--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -33,10 +33,7 @@ layout : default
         </h4>
       </div>
     </div>
-    <button
-      id="show-detail-button"
-      class="Bright-color font-Dosis"
-      type="button"
+    <button id="show-detail-button" class="Bright-color font-Dosis" type="button"
       onclick="window.open('{{ site.blogurl }}')">See My learning!</button>
   </div>
   <div class="Design-text">
@@ -62,7 +59,7 @@ layout : default
       </div>
       <button
         id="show-detail-button"
-        class="btn btn-primary"
+        class="btn btn-primary font-Dosis"
         name="detail-button">See Detail!</button>
     </div>
     <div id="about-my-skill-detail">
