--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -120,7 +120,8 @@ body{
 #about-me-content{
     display: flex;
     width: 80%;
-    margin-top: 120px;
+    margin-top: 12rem;
+    margin-right: 15rem;
 }
 .font-Dosis{
     font-family: 'Dosis', sans-serif;
@@ -136,7 +137,7 @@ body{
     margin-right: 20px;
 }
 #introduction{
-    width: 75%;
+    width: 85%;
 }
 #id-charactor{
     background-color: white;
