--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,4 +7,4 @@
 @import "layout/banner";
 @import "layout/post";
 @import "layout/about";
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600&family=Raleway:wght@800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600&family=Raleway:wght@500;800;900&display=swap');
