connect Google Analytics
add Google Analytics tag to header

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -121,7 +121,7 @@ layout : default
     </div>
   </div>
   <div id="semi-footer">
-
+    <img src="/assets/img/exampleIcon.png">
   </div>
   <div class="Design-text">
     Works
