--- a/_sass/layout/about.scss
+++ b/_sass/layout/about.scss
@@ -283,6 +283,7 @@ ul {
     min-height: 180vh;
     width: 100%;
     overflow: hidden;
+    position: relative;;
 }
 #about-my-Work-container{
     width: 100%;
@@ -290,6 +291,7 @@ ul {
     flex-flow: column;
     justify-content: space-around;
     align-items: center;
+    margin-bottom: 140px;
 }
 #about-my-Work-title{
     width: 100%;
@@ -368,4 +370,22 @@ ul {
 .Wrap-item img{
     width: 100%;
     height: 100%;
+}
+#semi-footer{
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+#semi-footer img{
+    width: 100%;
+    height: 100%;
+}
+#semi-footer::before{
+    content: "";
+}
+#semi-footer::after{
+    content: "";
 }
